tasks Basic 6.i seems work

--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -48,7 +48,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About Your Team" />
+            <MenuItem mnemonicParsing="false" text="About Your Team" onAction="#handleAboutYourTeamAction"  />
           </items>
         </Menu>
       </menus>
