--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -43,7 +43,7 @@
             <MenuItem mnemonicParsing="false" text="Close" />
             <MenuItem mnemonicParsing="false" text="Save" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
+            <MenuItem mnemonicParsing="false" text="Quit" onAction="#quit"/>
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
