--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -37,7 +37,7 @@
           <items>
           	<!-- When the button New is clicked, it call actionNew because onAction-->
           	<!-- I did not associate function to most of the buttons (except the button New and Go). Go ahead and edit if you need it -->
-            <MenuItem mnemonicParsing="false" onAction="#actionNew" text="New (call Controller.actionNew())" />
+            <MenuItem fx:id="lastSearchBt" mnemonicParsing="false" onAction="#actionNew" text="Last Search" />
             <MenuItem mnemonicParsing="false" text="Open" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" text="Close" onAction="#closeAndResetAll"/>
@@ -134,8 +134,8 @@
                                 <content>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
-                                          <ComboBox layoutX="273.0" layoutY="14.0" prefWidth="150.0" promptText="Search Record" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
-                                          <AreaChart layoutX="-41.0" layoutY="-62.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+                                          <ComboBox fx:id="areaChartCb" layoutX="273.0" layoutY="14.0" prefWidth="150.0" promptText="Search Record" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                                          <AreaChart fx:id="areaChart" layoutX="-41.0" layoutY="-62.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
                                             <xAxis>
                                               <CategoryAxis side="BOTTOM" />
                                             </xAxis>
