--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -62,7 +62,7 @@
                         <TextField fx:id="textFieldKeyword" layoutX="14.0" layoutY="36.0" prefHeight="25.0" prefWidth="131.0" promptText="Keyword" />
                         <!--  this is the Go button. When it is clicked, it calls Controller.actionSearch() -->
                         <Button layoutX="145.0" layoutY="36.0" mnemonicParsing="false" onAction="#actionSearch" prefHeight="25.0" prefWidth="35.0" text="Go" />
-                        <Button layoutX="145.0" layoutY="66.0" mnemonicParsing="false" onAction="#actionRefine" prefHeight="25.0" prefWidth="60.0" text="Refine" />
+                        <Button fx:id="refineBt" layoutX="145.0" layoutY="66.0" mnemonicParsing="false" onAction="#actionRefine" prefHeight="25.0" prefWidth="60.0" text="Refine" />
                         
 
                      </children>
