--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -38,7 +38,7 @@
           <items>
           	<!-- When the button New is clicked, it call actionNew because onAction-->
           	<!-- I did not associate function to most of the buttons (except the button New and Go). Go ahead and edit if you need it -->
-            <MenuItem fx:id="lastSearchBt" mnemonicParsing="false" onAction="#actionNew" text="Last Search" />
+            <MenuItem fx:id="lastSearchBt" mnemonicParsing="false" onAction="#actionLastSearch" text="Last Search" />
             <MenuItem mnemonicParsing="false" text="Open" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" text="Close" onAction="#closeAndResetAll"/>
