billy-task: minor update for master
remove deprecated item.posted_date
show fetching item posted date text
update UI element position on summery tab

--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -89,14 +89,14 @@
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
-                                          <Label layoutX="51.0" layoutY="48.0" text="Number of Data Fetched:" />
-                                          <Label fx:id="labelCount" layoutX="198.0" layoutY="48.0" prefHeight="17.0" prefWidth="78.0" text="&lt;total&gt;" />
+                                          <Label layoutX="51.0" layoutY="48.0" prefWidth="140.0" text="Number of Data Fetched:" />
+                                          <Label fx:id="labelCount" layoutX="200.0" layoutY="48.0" prefHeight="17.0" prefWidth="140.0" text="&lt;total&gt;" />
                                           <Label layoutX="51.0" layoutY="88.0" prefHeight="17.0" prefWidth="131.0" text="Average Selling Price:" />
-                                          <Label fx:id="labelPrice" layoutX="198.0" layoutY="88.0" text="&lt;AvgPrice&gt;" />
+                                          <Label fx:id="labelPrice" layoutX="200.0" layoutY="88.0" text="&lt;AvgPrice&gt;" />
                                           <Label layoutX="51.0" layoutY="128.0" text="Lowest Selling Price:" />
-                                          <Hyperlink fx:id="labelMin" layoutX="198.0" layoutY="128.0" text="&lt;Lowest&gt;" />
+                                          <Hyperlink fx:id="labelMin" layoutX="200.0" layoutY="128.0" text="&lt;Lowest&gt;" />
                                           <Label layoutX="51.0" layoutY="164.0" text="Latest Post:" />
-                                          <Hyperlink fx:id="labelLatest" layoutX="198.0" layoutY="164.0" text="&lt;Latest&gt;" />
+                                          <Hyperlink fx:id="labelLatest" layoutX="200.0" layoutY="164.0" text="&lt;Latest&gt;" />
                                        </children>
                                     </AnchorPane>
                               </content>
